# dsde-final-project

./: .env.example  .gitignore  pyproject.toml  requirement.txt
.agents/rules/: project-context.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-prototyping-data-prep-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-scaled-extraction-validation/: 01-PLAN.md  01-SUMMARY.md  02-CONTEXT.md  02-PLAN.md  02-RESEARCH.md  02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/04-wikipedia-scraping/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: SUMMARY.md
logs/: failed_extractions.json  failed_extractions_test.json
notebooks/: 01_prototype_ocr_extraction.ipynb  02_scaled_extraction.ipynb  03_wikipedia_scrape.ipynb  test_typhoon.ipynb
output/: election_structured_data.csv
