[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "acres==0.5.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "aistudio-sdk==0.3.8",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "bce-python-sdk==0.9.68",
    "beautifulsoup4==4.14.3",
    "black[jupyter]>=26.3.1",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "chardet==7.4.1",
    "charset-normalizer==3.4.7",
    "ci-info==0.4.0",
    "click==8.3.2",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "contourpy==1.3.3",
    "crc32c==2.8",
    "cssselect==1.4.0",
    "cssutils==2.11.1",
    "cuda-bindings==13.0.3",
    "cuda-pathfinder==1.3.3",
    "cuda-python==13.0.3",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "einops==0.8.2",
    "et-xmlfile==2.0.0",
    "etelemetry==0.3.1",
    "executing==2.2.1",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "ftfy==6.3.1",
    "future==1.0.0",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.9.2",
    "idna==3.11",
    "imagesize==2.0.0",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.5.0",
    "langchain==0.3.28",
    "langchain-community==0.3.31",
    "langchain-core==0.3.84",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.7.29",
    "looseversion==1.3.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "modelscope==1.35.3",
    "more-itertools==11.0.1",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nbconvert>=7.17.1",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nibabel==5.4.2",
    "nipype==1.11.0",
    "numpy==2.4.4",
    "nvidia-cublas==13.0.2.14",
    "nvidia-cuda-cccl==13.0.85",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.88",
    "nvidia-cudnn-cu13==9.13.0.50",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.1",
    "nvidia-nccl-cu13==2.28.3",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvtx==13.0.85",
    "ollama==0.6.1",
    "openai==2.31.0",
    "opencv-contrib-python==4.10.0.84",
    "openpyxl==3.1.5",
    "opt-einsum==3.3.0",
    "orjson==3.11.8",
    "packaging==25.0",
    "paddleocr==3.4.0",
    "paddlepaddle-gpu==3.3.1",
    "paddlex==3.4.3",
    "pandas==3.0.2",
    "parso==0.8.6",
    "pathlib==1.0.1",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "premailer==3.10.0",
    "prettytable==3.17.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "prov==2.1.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "puremagic==2.2.0",
    "py-cpuinfo==9.0.0",
    "pyclipper==1.4.0",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pydot==4.0.1",
    "pygments==2.20.0",
    "pymupdf==1.27.2.2",
    "pyparsing==3.3.2",
    "pypdf==6.9.2",
    "pypdfium2==5.7.0",
    "pytesseract==0.3.13",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "pyxnat==1.6.4",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "rdflib==7.6.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "ruamel-yaml==0.19.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "simplejson==3.20.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "traits==7.1.0",
    "typer==0.24.1",
    "typhoon-ocr==0.4.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "wcwidth==0.6.0",
    "widgetsnbextension==4.0.15",
    "wikipedia-api>=0.14.1",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = {index = "paddlepaddle"}
